Minor Bug - Clear Keyframes not smart enough #44558

Closed
opened 2015-04-30 11:39:56 +02:00 by Gyro Gearloose · 6 comments

Blender Version
Broken: 2.74

Exact steps for others to reproduce the error
Right-Click X-Rotation in the Transform Panel in the Properties Region of the View3D Area.
Choose Add Single Keyframe

Right-Click Again
Choose Clear Keyframes

Will Throw an Error:

  No action to delete keyframes from for ID = OBCube
**Blender Version** Broken: 2.74 **Exact steps for others to reproduce the error** Right-Click X-Rotation in the Transform Panel in the Properties Region of the View3D Area. Choose Add Single Keyframe Right-Click Again Choose Clear Keyframes Will Throw an Error: ``` No action to delete keyframes from for ID = OBCube ```
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @pink.vertex

Added subscriber: @pink.vertex
Joshua Leung self-assigned this 2015-04-30 12:22:19 +02:00
Member

Odd indeed... will investigate

Odd indeed... will investigate

This issue was referenced by debcd6b217

This issue was referenced by debcd6b2177938feef619e0b2d65e1dbf00cfef8
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit debcd6b217.

Closed by commit debcd6b217.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44558
No description provided.