Fix T44558 - "Clear Keyframes" complains when operating on an array property and it had deleted the action in the process